--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 <h2>**SwitchCase**</h2>
 <ul class="nav nav-pills">
 <li [class.active]="viewMode== 'map'"><a (click)="viewMode ='map'" >Map View</a></li>
-<li [class.active]="viewMode == 'list'"><a (click)="viewMode ='list'">List View</a></li>
+<li [class.active]="viewMode == 'list'"><a (click)="viewMode ='list'">List View Your</a></li>
 </ul>
 
 <div [ngSwitch]= "viewMode">
