--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,11 +1,36 @@
 <form>
     <div class="form-group">
     <label for="firstName">First Name</label>
-    <input type="text" id="firstName" class="form-control">   
+    <input 
+    required 
+    minlength="3"
+    maxlength="8" 
+    pattern="type" 
+    ngModel 
+    name="firstName" 
+    #firstName="ngModel" 
+    (change)="log(firstName)" 
+    type="text" 
+    id="firstName" 
+    class="form-control">   
+<div 
+class="alert  alert-danger" 
+*ngIf="firstName.touched && !firstName.valid">
+    <div *ngIf="firstName.errors.required">
+        First Name is required.
     </div>
+    <div *ngIf="firstName.errors.minlength">
+        First Name should have at least 3 characters.
+    </div>
+    <div *ngIf="firstName.errors.pattern">
+        First Name is not matched to the pattern.
+    </div>
+</div>    
+</div>
         <div class="form-group">
             <label for="comment">Comment</label>
-            <textarea name="" id="comment" cols="30" rows="10" class="form-control"></textarea>
+            <textarea required ngModel #comment="ngModel" name="comment" id="comment" cols="30" rows="10" class="form-control"></textarea>
+        <div class="alert alert-danger" *ngIf="comment.touched && !comment.valid">Comment is required.</div>
         </div>
 <button class="btn btn-primary">Submit</button>
 </form>
